--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: Inter, sans-serif;
-  
+  background: #181435;
 }
 .fontsColorBlack{
   color: rgb(34, 33, 33);
@@ -11,8 +11,6 @@ html, body {
 .fontsColorWhite{
     color: white;
     }
-    
-
 .layout {
     width: 100%;
     height: 100vh;
@@ -30,8 +28,11 @@ html, body {
     border: 2px solid;
 }
   .body { 
+    margin: 20px;
     border: 2px solid;
     grid-area: body;
+    background: #FFFFFF;
+    border-radius:15px;
 }
 
 .containerBody{
@@ -39,7 +40,7 @@ html, body {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(2, 1fr);
-    gap:60px;
+    gap:8px;
 
   }
   .container_flex {
@@ -48,9 +49,9 @@ html, body {
     gap: 20px; 
     background-color: #b96bfb;
     border-radius: 12px;
-    margin: 20px; /* Separar del borde de la página */
-    padding: 15px; /* Separar el contenido del borde del div */
-    border-radius: 10px; /* Redondea los bordes, opcional */
+    margin: 20px; 
+    padding: 15px; 
+    border-radius: 10px; 
 }
 
 .text_container {
@@ -66,7 +67,7 @@ html, body {
     border-radius: 10px; 
 }
 .icon{
-  height: 50px;
+  height: 30px;
 }
 
 
@@ -134,8 +135,6 @@ h1{
   background: linear-gradient(#d7cfcf, #9198e5);
 }
 
-
-
 .textBox {
   width: calc(100% - 90px);
   margin-left: 10px;
@@ -164,3 +163,8 @@ h1{
   font-weight: 400;
 }
 
+.ArtistRight {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
